# Solemne_1

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  test_main.py
.github/workflows/: main.yml
github/workflows/: main.yml
